<resources>
    <string name="app_name">Jose\'s Mortgage Calculator</string>
    <string name="label_amount">Amount</string>
    <string name="amount">$100000.00</string>
    <string name="label_years">Years</string>
    <string name="years">30</string>
    <string name="label_rate">Interest Rate</string>
    <string name="rate">3.5%</string>
    <string name="label_monthly_payment">Monthly Payment</string>
    <string name="monthly_payment">$449.04</string>
    <string name="label_total_payment">Total Payment</string>
    <string name="total_payment">$161654.66</string>
    <string name="modify_data">Modify Data</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>
    <string name="amountDecimal">100000.00</string>
    <string name="rateDecimal">.035</string>
    <string name="apply">Apply</string>
    <string name="label_down">Down Payment</string>
    <string name="data_down">$20,000.00</string>
    <string name="downDecimal">20000.00</string>
</resources>