<?xml version="1.0" encoding="UTF-8" ?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableRow>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        <TextView
            android:padding="10dip"
            android:text="@string/label_amount"/>
        <TextView
            android:id="@+id/amount"
            android:padding="10dip"
            android:text="@string/amount"
                />
    </TableRow>

    <TableRow>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        <TextView
            android:padding="10dip"
            android:text="@string/label_down"/>
        <TextView
            android:id="@+id/down"
            android:padding="10dip"
            android:text="@string/data_down"
            />
    </TableRow>

    <TableRow>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        <TextView
            android:text="@string/label_years"
            android:padding="10dip"/>
        <TextView
            android:id="@+id/years"
            android:text="@string/years"
            android:padding="10dip"
        />

    </TableRow>
    <TableRow>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        <TextView
            android:text="@string/label_rate"
            android:padding="10dip"/>
        <TextView
            android:id="@+id/rate"
            android:text="@string/rate"
            android:padding="10dip"/>    </TableRow>
    <View
        android:layout_height="3dip"
        android:background="@color/yellow_300"/>
    <TableRow>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        <TextView
            android:text="@string/label_monthly_payment"
            android:padding="10dip"/>
        <TextView
            android:id="@+id/payment"
            android:text="@string/monthly_payment"
            android:padding="10dip"/>    </TableRow>
    <TableRow>
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        <TextView
            android:text="@string/label_total_payment"
            android:padding="10dip"/>
        <TextView
            android:id="@+id/total"
            android:text="@string/total_payment"
            android:padding="10dip"/>    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="20dip">
        <Button
                    android:gravity="center"
                    android:layout_column="1"
                    android:onClick="modifyData"
                    android:text="Modify Data"  />
    </TableRow>
</TableLayout>